<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.notemanagement.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.notemanagement.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_priority"
        android:name="com.example.notemanagement.ui.priority.PriorityFragment"
        android:label="@string/menu_priority"
        tools:layout="@layout/fragment_priority" />
    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.notemanagement.ui.status.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />
    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.notemanagement.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />
    <fragment
        android:id="@+id/nav_editProfile"
        android:name="com.example.notemanagement.ui.editProfile.EditProfileFragment"
        android:label="@string/menu_editProfile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/nav_changePwd"
        android:name="com.example.notemanagement.ui.changePwd.ChangePwdFragment"
        android:label="@string/menu_changePwd"
        tools:layout="@layout/fragment_change_pwd" />
</navigation>