<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.changePwd.ChangePwdFragment"
    android:background="@drawable/sun"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_editProfile"
            android:textSize="36dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/purple_500"/>

        <EditText
            android:id="@+id/fragment_editProfile_et_firstName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/first_name"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>
        <EditText

            android:id="@+id/fragment_editProfile_et_lastName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/last_name"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            app:endIconMode="password_toggle"/>
        <EditText
            android:id="@+id/fragment_editProfile_et_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/email"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            app:endIconMode="password_toggle"/>
        <EditText
            android:id="@+id/fragment_editProfile_et_newEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/new_email"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            app:endIconMode="password_toggle"/>
        <Button
            android:id="@+id/fragment_editProfile_btn_update"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/update"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button" />

        <TextView
            android:id="@+id/fragment_editProfile_tv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:textStyle="italic"
            android:textColor="@color/black"/>
        </LinearLayout>
</FrameLayout>