<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.changePwd.ChangePwdFragment"
    android:background="@drawable/sun">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_changePwd"
                android:textSize="36dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple_500"/>

            <EditText
                android:id="@+id/fragment_changePwd_et_currentPwd"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/current_password"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/fragment_changePwd_et_newPwd"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/new_password"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                app:endIconMode="password_toggle"/>
            <EditText
                android:id="@+id/fragment_changePwd_et_confirmNewPwd"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/confirm_new_password"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                app:endIconMode="password_toggle"/>
            <Button
                android:id="@+id/fragment_changePwd_btn_update"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/update"
                android:textSize="18dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button" />

        </LinearLayout>

</FrameLayout>