<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:background="@drawable/sun"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="36dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/purple_500"/>

        <EditText
            android:id="@+id/activity_login_et_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/email"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/activity_login_et_pwd"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/password"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            app:endIconMode="password_toggle"/>

        <CheckBox
            android:id="@+id/activity_login_chk_remember"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/purple_500"/>

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button" />

        <TextView
            android:id="@+id/activity_login_tv_newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Do not have an account? Sign up"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/purple_700"
            android:textStyle="italic"/>
    </LinearLayout>

</RelativeLayout>