<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".dialog.NoteDialog">

    <EditText
        android:id="@+id/dialog_add_note_et_note_name"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter note name"
        android:textSize="18dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_note_til_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/menu_category">
        <AutoCompleteTextView
            android:id="@+id/dialog_add_note_tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/purple_500" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_note_til_priority"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/menu_priority">
        <AutoCompleteTextView
            android:id="@+id/dialog_add_note_tv_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/purple_500" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_note_til_status"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/menu_status">
        <AutoCompleteTextView
            android:id="@+id/dialog_add_note_tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/purple_500"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/dialog_add_note_tv_date_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Plan Date"
            android:textColor="@color/purple_700"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_add_note_tv_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_add_note_btn_pick_date"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toEndOf="@+id/dialog_add_note_tv_date_name" />

        <Button
            android:id="@+id/dialog_add_note_btn_pick_date"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_button"
            android:text="Date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.984"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/dialog_add_note_btn_add"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_button"
            android:text="@string/btn_add"
            android:textSize="18dp"/>
        <Button
            android:id="@+id/dialog_add_note_btn_close"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_button"
            android:layout_marginStart="20dp"
            android:text="@string/btn_close"
            android:textSize="18dp"/>

    </LinearLayout>

</LinearLayout>